--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
 phases:
   pre_build:
     commands:
-      - export API_REPOSITORY_URL="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/backend"
+      - export API_REPOSITORY_URL="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/vic-ia"
       - echo $CODEBUILD_RESOLVED_SOURCE_VERSION
       - >
         aws ecr get-login-password --region $AWS_DEFAULT_REGION |
