--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,16 @@
 version: 0.2
 
+env:
+  variables:
+    NODE_ENV: production
 phases:
+  install:
+    runtime-versions:
+      nodejs:20
   pre_build:
     commands:
       - export API_REPOSITORY_URL="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/vic-ia"
-      - export GIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
-      - echo $GIT_HASH
+      - export GIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7ZZ)
       - >
         aws ecr get-login-password --region $AWS_DEFAULT_REGION |
         docker login --username AWS --password-stdin
@@ -13,6 +18,9 @@ phases:
       - docker pull $API_REPOSITORY_URL:latest || true
   build:
     commands:
+      - yarn set version 4.1.1
+      - yarn install
+      - yarn run build
       - >
         docker build
         --cache-from $API_REPOSITORY_URL:latest
