--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,27 @@
 {
   "name": "backend",
-  "main": "backend.js",
+  "main": "src/backend.js",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "start": "node dist/backend.js",
-    "dev": "nodemon backend.ts"
+    "dev": "nodemon src/backend.ts"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.12",
     "@types/ws": "^8",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-ws": "^5.0.2",
+    "openai": "^4.47.1",
     "ts-node": "^10.9.2",
     "ws": "^8.17.0"
   }
