--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "main": "src/app.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts"
   },
@@ -25,6 +25,7 @@
     "express-ws": "^5.0.2",
     "openai": "^4.47.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "uuidv7": "^1.0.0",
     "ws": "^8.17.0"
   }
