--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/ws": "^8",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.8",
+    "deepmerge": "^4.3.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-ws": "^5.0.2",
