--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       OPENAI_ORGANIZATION: '${OPENAI_ORGANIZATION}'
       OPENAI_API_KEY: '${OPENAI_API_KEY}'
       OPENAI_ASSISTANT: '${OPENAI_ASSISTANT}'
+      GEMINI_API_KEY: '${GEMINI_API_KEY}'
       COWMED_API_URL: '${COWMED_API_URL}'
       LLM_BACKEND: '${LLM_BACKEND}'
       DYNAMODB_ENDPOINT: '${DYNAMODB_ENDPOINT:-http://dynamodb:8000}'
