--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock": "^3.600.0",
     "@aws-sdk/client-dynamodb": "^3.583.0",
+    "@aws-sdk/credential-providers": "^3.600.0",
     "@google/generative-ai": "^0.13.0",
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
