--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5",
     "vite": "^5.1.5",
+    "vite-plugin-pwa": "^0.20.1",
     "vite-plugin-vue-devtools": "^7.0.16",
     "vitest": "^1.3.1",
     "vue-tsc": "^2.0.6"
